<resources>
    <string name="app_name">Android Java Calculator</string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>

    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="times_sign">*</string>
    <string name="divide_sign">/</string>
    <string name="equal_sign">=</string>
    <string name="dot_sign">.</string>
    <string name="clear_sign">C</string>
</resources>
