<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.usthing.androidjavacalculator.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:digits="+-*/.0123456789"/>

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:inputType="none"
            android:maxLines="1"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/input_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/result"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:divider="@drawable/horizontal_divider"
            android:showDividers="beginning|middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:divider="@drawable/vertical_divider"
                android:showDividers="middle">

                <Button
                    android:id="@+id/button_7"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_7"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_8"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_8"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_9"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_9"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_add"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/plus_sign"
                    android:textSize="24sp"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:divider="@drawable/vertical_divider"
                android:showDividers="middle">

                <Button
                    android:id="@+id/button_4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_4"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_5"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_5"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_6"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_subtract"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/minus_sign"
                    android:textSize="24sp"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:divider="@drawable/vertical_divider"
                android:showDividers="middle">

                <Button
                    android:id="@+id/button_3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_3"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_2"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_1"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_multiply"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/times_sign"
                    android:textSize="24sp"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:divider="@drawable/vertical_divider"
                android:showDividers="middle">

                <Button
                    android:id="@+id/button_dot"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/dot_sign"
                    android:textSize="24sp"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/button_0"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_0"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_clear"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/clear_sign"
                    android:textSize="24sp"
                    android:textColor="@android:color/holo_red_light"/>

                <Button
                    android:id="@+id/button_divide"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/divide_sign"
                    android:textSize="24sp"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:divider="@drawable/vertical_divider"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                </LinearLayout>

                <Button
                    android:id="@+id/button_compute"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/equal_sign"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
